objects/Account_Order_Address__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account - Order Addresses (Account)</relationshipLabel>
        <relationshipName>Account_Order_Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Emails__c</fullName>
        <inlineHelpText>Semi-Colon separated Email Addresses.</inlineHelpText>
        <label>Additional Emails</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Support Owner</fullName>
                </value>
                <value>
                    <fullName>Activation Email</fullName>
                </value>
                <value>
                    <fullName>Order Acknowledgement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_To__c</fullName>
        <label>Attention To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCDB_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCDB/Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name2__c</fullName>
        <label>Company Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copied_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copied From</label>
        <referenceTo>Account_Order_Address__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_Content_Document_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing 
Lookup to the Contract for this address</description>
        <inlineHelpText>Lookup to the Contract for this address</inlineHelpText>
        <label>GCR_Content_Document_Detail</label>
        <referenceTo>GCR_Content_Document_Detail__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hardware_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardware Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PureCloud_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PureCloud Project</label>
        <referenceTo>PureCloud_Trial__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Method_Name__c</fullName>
        <label>Shipping Method Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>EX WORKS</fullName>
                </value>
                <value>
                    <fullName>PICK UP</fullName>
                </value>
                <value>
                    <fullName>Time Definite AM</fullName>
                </value>
                <value>
                    <fullName>Time Definite PM</fullName>
                </value>
                <value>
                    <fullName>FREIGHT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_To_Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To/Business Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account - Order Addresses (Sold To/Business Partner)</relationshipLabel>
        <relationshipName>Account_Order_Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity_Status__c</fullName>
        <label>Validity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Not Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? To store Zuora Quote associated with an order address.
Downstream Impact? N/A
Which department is owner? Sales Ops/Order Management</description>
        <label>Zuora Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Account - Order Addresses</relationshipLabel>
        <relationshipName>Account_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account - Order Address</label>
    <nameField>
        <displayFormat>AOA - {0000}</displayFormat>
        <label>Record Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account - Order Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AdditionalEmail_data_Format_Verification</fullName>
        <active>false</active>
        <errorConditionFormula>If( ISBLANK(Additional_Emails__c), false,
NOT(REGEX( Additional_Emails__c ,&quot;^[a-zA-Z0-9._|\\\\%#~`=?&amp;/$^*!}{+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}(\\s*;\\n*\\s*[a-zA-Z0-9._|\\\\%#~`=?&amp;/$^*!}{+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4})*\\s*;?$&quot;) ) 
)</errorConditionFormula>
        <errorDisplayField>Additional_Emails__c</errorDisplayField>
        <errorMessage>Invalid Email Format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cloud_Billing_Contract_Addr_Iso_Country</fullName>
        <active>false</active>
        <description>Cloud Billing requires ISO country codes for their addresses</description>
        <errorConditionFormula>LEN(Country__c) != 2 &amp;&amp; NOT(ISBLANK(GCR_Content_Document_Detail__c))</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Cloud Billing Addresses need to use 2 letter ICO code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_data_Format_Verification</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISBLANK(Email__c ), false, 
NOT(REGEX( Email__c , &quot;^[a-zA-Z0-9._|\\\\%#~`=?&amp;/$^*!}{+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$&quot;)) )</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Invalid Email Format</errorMessage>
    </validationRules>
</CustomObject>